--- a/project/index.html
+++ b/project/index.html
@@ -1,188 +1,190 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-<title>Denver | Colorado</title>
-<meta charset="utf-8">
-</head>
-<body>
+    <head>
+        <meta charset="utf-8">
+        <title> Denver | Colorado </title>
+        <link rel="stylesheet" href="./css/shared.css">
+        <link rel="stylesheet" href="./css/animations.css">
+    </head>
+        <body>
 
-<!--- NAV --->
-<div>
-	<div>
-		<ul>
-			<a href="#home" id="link"><li>HOME</li></a>
-			<a href="#gallery"><li>GALLERY</li></a>
-			<a href="#contact"><li>RESERVATIONS</li></a>
-		</ul>
-	</div>
-</div>
-<!--- END NAV --->
+            <!--NAV-->
+            <div class="wrap">
+                <div class="menu-container">
+                    <ul>
+                        <a href="#home"><li>HOME</li>
+                        <a href="#gallery"><li>GALLERY</li>
+                        <a href="#contact"><li>RESERVATIONS</li>
+                    </ul>
+                </div>
+            </div>
 
-<!--- HOME --->
-<div id="home">
-	<div>
-		<div>
-			<span>Denver Colorado</span>
-		</div>
-	</div>
-</div>
-<!--- END HOME --->
+            <!--END NAV-->
 
-<!--- GALLERY --->
-<section>
-	<div id="gallery">
-		<h1>Gallery</h1>
-		<div>
-		
-			<!--- PHOTO-CONTAINER 1 --->
-			<div class="photo-container">
-				<div class="photo">
-					<img src="./images/thumb/thumbnail_1.png" alt="Denver Courthouse" width="500" height="300">
-					<div class="photo-overlay">
-						<h3 class="white-head">Click to Enlarge</h3>
-						<p>Book your flight to Denver, Colorado!</p>
-					</div>
-				</div>
-			</div>
-			<!--- END PHOTO-CONTAINER 1 --->
-			
-			<!--- PHOTO-CONTAINER 2 --->
-			<div class="photo-container">
-				<div class="photo">
-					<img src="./images/thumb/thumbnail_2.png" alt="Christmas in Denver" width="500" height="300">
-					<div class="photo-overlay">
-						<h3 class="white-head">Click to Enlarge</h3>
-						<p>Book your flight to Denver, Colorado!</p>
-					</div>
-				</div>
-			</div>
-			<!--- END PHOTO-CONTAINER 2 --->
-			
-			<!--- PHOTO-CONTAINER 3 --->
-			<div class="photo-container">
-				<div class="photo">
-					<img src="./images/thumb/thumbnail_3.png" alt="Denver sunset" width="500" height="300">
-					<div class="photo-overlay">
-						<h3 class="white-head">Click to Enlarge</h3>
-						<p>Book your flight to Denver, Colorado!</p>
-					</div>
-				</div>
-			</div>
-			<!--- END PHOTO-CONTAINER 3 --->
-			
-			<!--- PHOTO-CONTAINER 4 --->
-			<div class="photo-container">
-				<div class="photo">
-					<img src="./images/thumb/thumbnail_4.png" alt="Denver Mountains" width="500" height="300">
-					<div class="photo-overlay">
-						<h3 class="white-head">Click to Enlarge</h3>
-						<p>Book your flight to Denver, Colorado!</p>
-					</div>
-				</div>
-			</div>
-			<!--- END PHOTO-CONTAINER 4 --->
-			
-			<!--- PHOTO-CONTAINER 5 --->
-			<div class="photo-container">
-				<div class="photo">
-					<img src="./images/thumb/thumbnail_5.png" alt="Union Station" width="500" height="300">
-					<div class="photo-overlay">
-						<h3 class="white-head">Click to Enlarge</h3>
-						<p>Book your flight to Denver, Colorado!</p>
-					</div>
-				</div>
-			</div>
-			<!--- END PHOTO-CONTAINER 5 --->
-			
-			<!--- PHOTO-CONTAINER 6 --->
-			<div class="photo-container">
-				<div class="photo">
-					<img src="./images/thumb/thumbnail_6.png" alt="Broncos Stadium" width="500" height="300">
-					<div class="photo-overlay">
-						<h3 class="white-head">Click to Enlarge</h3>
-						<p>Book your flight to Denver, Colorado!</p>
-					</div>
-				</div>
-			</div>
-			<!--- END PHOTO-CONTAINER 6 --->
-			
-			<!--- PHOTO-CONTAINER 7 --->
-			<div class="photo-container">
-				<div class="photo">
-					<img src="./images/thumb/thumbnail_7.png" alt="Elitch Gardens Amusement Park" width="500" height="300">
-					<div class="photo-overlay">
-						<h3 class="white-head">Click to Enlarge</h3>
-						<p>Book your flight to Denver, Colorado!</p>
-					</div>
-				</div>
-			</div>
-			<!--- END PHOTO-CONTAINER 7 --->
-			
-			<!--- PHOTO-CONTAINER 8 --->
-			<div class="photo-container">
-				<div class="photo">
-					<img src="./images/thumb/thumbnail_8.png" alt="Mountains" width="500" height="300">
-					<div class="photo-overlay">
-						<h3 class="white-head">Click to Enlarge</h3>
-						<p>Book your flight to Denver, Colorado!</p>
-					</div>
-				</div>
-			</div>
-			<!--- END PHOTO-CONTAINER 8 --->
-			
-			<!--- PHOTO-CONTAINER 9 --->
-			<div class="photo-container">
-				<div class="photo">
-					<img src="./images/thumb/thumbnail_9.png" alt="Fall in Denver" width="500" height="300">
-					<div class="photo-overlay">
-						<h3 class="white-head">Click to Enlarge</h3>
-						<p>Book your flight to Denver, Colorado!</p>
-					</div>
-				</div>
-			</div>
-			<!--- END PHOTO-CONTAINER 9 --->
-			
-		</div>
-	</div>
-</section>
-<!--- END GALLERY --->
+            <!--HOME-->
+            <div id="home">
+                <div class="container">
+                    <div class="text-center">
+                        <span class="head-main">Denver, Colorado</span>
+                    </div>
+                </div>
+            </div>
+            <!--END HOME-->
 
-<!--- RSVP --->
-<section>
-	<div id="contact">
-		<div>
-			<h1>Reservations</h1>
-			<div>
-				<h2><span>The mile high city is calling!</span>
-				<br />Denver is beautiful!				</h2>
-				<p>
-					Please provide your basic contact information.
-				</p>
-				<div>
-					<form action="" method="post">
-						<input class="rsvp" type="text" value="First Name">
-						<input class="rsvp" type="text" value="Last Name">
-						<input class="rsvp" type="text" value="Email Address">
-						<input class="rsvp" type="text" value="Phone Number">
-						<div class="form-spacer">
-							<label class="terms">Terms and Conditions</label>
-						</div>
-						<div>
-							<input type="submit" value="Submit">
-						</div>
-					</form>
-				</div>
-			</div>
-		</div>
-	</div>
-</section>
-<!--- END RSVP --->
+            <!--GALLERY-->
+            <section id="gallery">
+                <div class="container">
+                    <h1>Gallery</h1>
+                    <div class="flex-container">
+                        
+                        <!---PHOTO CONTAINER 1--->
+                        <div class="photo-container">
+                            <div class="photo">
+                                <img src="./images/thumb/thumbnail_1.png" alt="">
+                                <div class="photo-overlay">
+                                    <h3>Click to Enlarge</h3>
+                                    <p>We have several flights departing daily, book your trip to Denver today!</p>
+                                </div>
+                            </div>
+                        </div>
+                        <!---END PHOTO CONTAINER 1--->
 
-<!--- FOOTER --->
-<div>
-www.denvercolorado.travel &nbsp;|&nbsp; &copy; 2020
-</div>
-<!--- END FOOTER --->
+                        <!---PHOTO CONTAINER 2--->
+                        <div class="photo-container">
+                            <div class="photo">
+                                <img src="./images/thumb/thumbnail_2.png" alt="">
+                                <div class="photo-overlay">
+                                    <h3>Click to Enlarge</h3>
+                                    <p>We have several flights departing daily, book your trip to Denver today!</p>
+                                </div>
+                            </div>
+                        </div>
+                        <!---END PHOTO CONTAINER 2--->
 
-</body>
-</html>
+                        <!---PHOTO CONTAINER 3--->
+                        <div class="photo-container">
+                            <div class="photo">
+                                <img src="./images/thumb/thumbnail_3.png" alt="">
+                                <div class="photo-overlay">
+                                    <h3>Click to Enlarge</h3>
+                                    <p>We have several flights departing daily, book your trip to Denver today!</p>
+                                </div>
+                            </div>
+                        </div>
+                        <!---END PHOTO CONTAINER 3--->
+
+                        <!---PHOTO CONTAINER 4--->
+                        <div class="photo-container">
+                            <div class="photo">
+                                <img src="./images/thumb/thumbnail_4.png" alt="">
+                                <div class="photo-overlay">
+                                    <h3>Click to Enlarge</h3>
+                                    <p>We have several flights departing daily, book your trip to Denver today!</p>
+                                </div>
+                            </div>
+                        </div>
+                        <!---END PHOTO CONTAINER 4--->
+
+                        <!---PHOTO CONTAINER 5--->
+                        <div class="photo-container">
+                            <div class="photo">
+                                <img src="./images/thumb/thumbnail_5.png" alt="">
+                                <div class="photo-overlay">
+                                    <h3>Click to Enlarge</h3>
+                                    <p>We have several flights departing daily, book your trip to Denver today!</p>
+                                </div>
+                            </div>
+                        </div>
+                        <!---END PHOTO CONTAINER 5--->
+
+                        <!---PHOTO CONTAINER 6--->
+                        <div class="photo-container">
+                            <div class="photo">
+                                <img src="./images/thumb/thumbnail_6.png" alt="">
+                                <div class="photo-overlay">
+                                    <h3>Click to Enlarge</h3>
+                                    <p>We have several flights departing daily, book your trip to Denver today!</p>
+                                </div>
+                            </div>
+                        </div>
+                        <!---END PHOTO CONTAINER 6--->
+
+                        <!---PHOTO CONTAINER 7--->
+                        <div class="photo-container">
+                            <div class="photo">
+                                <img src="./images/thumb/thumbnail_7.png" alt="">
+                                <div class="photo-overlay">
+                                    <h3>Click to Enlarge</h3>
+                                    <p>We have several flights departing daily, book your trip to Denver today!</p>
+                                </div>
+                            </div>
+                        </div>
+                        <!---END PHOTO CONTAINER 7--->
+
+                        <!---PHOTO CONTAINER 8--->
+                        <div class="photo-container">
+                            <div class="photo">
+                                <img src="./images/thumb/thumbnail_8.png" alt="">
+                                <div class="photo-overlay">
+                                    <h3>Click to Enlarge</h3>
+                                    <p>We have several flights departing daily, book your trip to Denver today!</p>
+                                </div>
+                            </div>
+                        </div>
+                        <!---END PHOTO CONTAINER 8--->
+
+                        <!---PHOTO CONTAINER 9--->
+                        <div class="photo-container">
+                            <div class="photo">
+                                <img src="./images/thumb/thumbnail_9.png" alt="">
+                                <div class="photo-overlay">
+                                    <h3>Click to Enlarge</h3>
+                                    <p>We have several flights departing daily, book your trip to Denver today!</p>
+                                </div>
+                            </div>
+                        </div>
+                        <!---END PHOTO CONTAINER 9--->
+                    </div>
+                </div>
+            </section>
+            <!--END GALLERY-->
+
+            <!--RSVP-->
+            <section id="contact">
+              <div class="container">
+                <div class="heading-padding">
+                  <h1 class="heading-padding">Reservations</h1>
+                  <div class="reservation">
+                  <h2><span>Your adventure is just over the mountains!</span>
+                    </br> Reserve your flight today!
+                  </h2>
+                  <p class="rsvp-text">
+                    Please provide us with your basic contact information!
+                  </p>
+                  <div class="form-rsvp">
+                    <form action="" method="post">
+                      <input class="rsvp" type="text" value="" placeholder="First Name">
+                      <input class="rsvp" type="text" value="" placeholder="Last Name">
+                      <input class="rsvp" type="text" value="" placeholder="Email Address">
+                      <input class="rsvp" type="text" value="" placeholder="Phone Number">
+                      <div class="form-spacer">
+                      <label class="terms">Terms and Conditions</label>
+                      </div>
+                      <div class="submit">
+                        <input type="submit"value="Submit">
+                      </div>
+                    </form>
+                  </div>
+                  </div>
+              </div>
+            </section>
+            <!---END RSVP-->
+
+            <!--FOOTER-->
+            <div id="footer">
+              www.denvercolorado.denco &nbsp;|&nbsp; &copy; 2020
+            </div>
+            <!---END FOOTER-->
+
+        </body>
+ </html>   
